fixed dropdown cutoff

--- a/client/src/stock_listing_user.css
+++ b/client/src/stock_listing_user.css
@@ -89,6 +89,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    height:80vh;
     align-items: center;
     overflow-y: scroll;
 }
@@ -116,6 +117,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding-bottom: 2vh;
+    height: '6vh';
 }
 
 p#filterControlLabel {
